--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,13 @@ typings/
 
 # next.js build output
 .next
+
+# database migration configuration file
+database.json
+
+# Plugin configurations
+/conf/**/*.*
+!/conf/**/*.example
+
+# Runtime data
+/data
