切到mirai，同时砍了权限等功能

--- a/.env.example
+++ b/.env.example
@@ -9,15 +9,9 @@ LOG_FILE=log.log
 # Available values: ALL | TRACE | DEBUG | INFO | WARN | ERROR | FATAL | MARK | OFF
 LOG_LEVEL=INFO
 
-# MySQL Config
-DB_HOST=127.0.0.1
-DB_USER=root
-DB_PASS=root
-DB_NAME=xcb
-
-# CoolQ Config
-COOLQ_HOST=127.0.0.1
-COOLQ_PORT=5700
+# Mirai Config
+MIRAI_HOST=127.0.0.1
+MIRAI_PORT=5700
 
 # Other Config
 PICTURE_PATH=file:///var/www/images/
