--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
         "ecmaVersion": 2018
     },
     "rules": {
+        "no-unreachable": "off",
         "indent": [
             "error",
             4
