--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "xcb-sys",
   "version": "3.0.0",
-  "description": "Xiaociba system for CoolQ through https://github.com/richardchien/coolq-http-api",
+  "description": "simplified Xiaociba system for Mirai",
   "main": "index.js",
   "dependencies": {
-    "db-migrate-mysql": "^1.1.10",
     "dotenv": "^8.1.0",
     "lodash": "^4.17.15",
-    "log4js": "^5.2.1",
-    "mysql": "^2.17.1",
-    "quick-lru": "^4.0.1"
+    "log4js": "^5.2.1"
   },
   "devDependencies": {
     "eslint": "^6.5.1"
@@ -20,7 +17,7 @@
     "url": "git+https://github.com/DavidDiao/xcb-sys-v3.git"
   },
   "keywords": [
-    "coolq",
+    "mirai",
     "qq",
     "qqbot",
     "qqrobot"
